fix: cannot access gapi

--- a/src/docs/reminders/google-calendar/style.scss
+++ b/src/docs/reminders/google-calendar/style.scss
@@ -17,6 +17,10 @@ body {
   margin: 20px;
 }
 
+.callback {
+  display: none;
+}
+
 [hidden] {
   display: none;
 }
